--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,52 +9,73 @@
     <GridLayout android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:rowCount="3"
-        android:columnCount="3">
+        android:columnCount="3"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        >
 
         <Button
             android:id="@+id/oneButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1" />
+            android:text="1"
+            android:layout_row="0"
+            android:layout_column="0"/>
         <Button
             android:id="@+id/twoButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2" />
+            android:text="2"
+            android:layout_row="0"
+            android:layout_column="1"/>
         <Button
             android:id="@+id/threeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3" />
+            android:text="3"
+            android:layout_row="0"
+            android:layout_column="2"/>
         <Button
             android:id="@+id/fourButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4" />
+            android:text="4"
+            android:layout_row="1"
+            android:layout_column="0"/>
         <Button
             android:id="@+id/fiveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="5" />
+            android:text="5"
+            android:layout_row="1"
+            android:layout_column="1"/>
         <Button
             android:id="@+id/sixButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="6" />
+            android:text="6"
+            android:layout_row="1"
+            android:layout_column="2"/>
         <Button
             android:id="@+id/sevenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="7" />
+            android:text="7"
+            android:layout_row="2"
+            android:layout_column="0"/>
         <Button
             android:id="@+id/eightButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="8" />
+            android:text="8"
+            android:layout_row="2"
+            android:layout_column="1"/>
         <Button
             android:id="@+id/nineButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="9" />
+            android:text="9"
+            android:layout_row="2"
+            android:layout_column="2"/>
     </GridLayout>
 </RelativeLayout>
