--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,90 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.sudokusolver.SudokuBoardView
-        android:id="@+id/sudokuBoardView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/buttonsLayout"
-        />
 
-    <GridLayout
-        android:id="@+id/buttonsLayout"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/btnBoardView"
         android:layout_width="wrap_content"
-        android:rowCount="3"
-        android:columnCount="3"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:text="@string/board_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/oneButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1"
-            android:layout_row="0"
-            android:layout_column="0"/>
-        <Button
-            android:id="@+id/twoButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2"
-            android:layout_row="0"
-            android:layout_column="1"/>
-        <Button
-            android:id="@+id/threeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3"
-            android:layout_row="0"
-            android:layout_column="2"/>
-        <Button
-            android:id="@+id/fourButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4"
-            android:layout_row="1"
-            android:layout_column="0"/>
-        <Button
-            android:id="@+id/fiveButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5"
-            android:layout_row="1"
-            android:layout_column="1"/>
-        <Button
-            android:id="@+id/sixButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="6"
-            android:layout_row="1"
-            android:layout_column="2"/>
-        <Button
-            android:id="@+id/sevenButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="7"
-            android:layout_row="2"
-            android:layout_column="0"/>
-        <Button
-            android:id="@+id/eightButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="8"
-            android:layout_row="2"
-            android:layout_column="1"/>
-        <Button
-            android:id="@+id/nineButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="9"
-            android:layout_row="2"
-            android:layout_column="2"/>
-    </GridLayout>
-</RelativeLayout>
+    <Button
+        android:id="@+id/btnCameraView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
+        android:text="@string/camera_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnBoardView" />
+
+    <Button
+        android:id="@+id/btnLoadImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/load_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCameraView" />
+</androidx.constraintlayout.widget.ConstraintLayout>
