--- a/app/src/main/res/layout/activity_sudoku_board.xml
+++ b/app/src/main/res/layout/activity_sudoku_board.xml
@@ -103,5 +103,21 @@
             app:srcCompat="@drawable/delete_black"
             tools:ignore="VectorDrawableCompat" />
 
+        <Button
+            android:id="@+id/solveButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:text="solve" />
+
+        <Button
+            android:id="@+id/clearBoardButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:text="clear" />
+
     </GridLayout>
 </RelativeLayout>
