--- a/app/src/main/res/layout/activity_sudoku_board.xml
+++ b/app/src/main/res/layout/activity_sudoku_board.xml
@@ -109,7 +109,8 @@
             android:layout_height="wrap_content"
             android:layout_row="3"
             android:layout_column="2"
-            android:text="solve" />
+            android:text="solve"
+            android:clickable="true"/>
 
         <Button
             android:id="@+id/clearBoardButton"
